bynkc/tests/fixtures/negative/221_signature_requires_body/src/demo.bynk
context demo

actor Hook { auth = Signature(secret = "WH", header = "X-Sig") }

service api from http {
  on GET("/hook") () -> Effect[HttpResult[String]] by Hook {
    Ok("ok")
  }
}
